# OTUS_oop

./: .gitignore  Makefile  README.md  api.py  pyproject.toml  scoring.py  tests.py
.github/workflows/: makefile.yml
