[tool.poetry]
name = "otus-oop"
version = "0.1.0"
description = ""
authors = ["Alexandr Alferov <alferov960@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
